# TaskManagerAPI

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/api/: dependencies.py
src/api/middlewares/: auth.py
src/api/routers/: auth.py  routers.py  tasks.py  users.py
src/db/: db.py
src/db/models/: tasks.py  users.py
src/db/schemas/: auth.py  tasks.py  users.py
src/migrations/: env.py
src/migrations/versions/: c5c2fb25c375_auto_revision.py
src/repositories/: tasks.py  users.py
src/services/: auth.py  tasks.py  users.py
src/utils/: auth.py  crypt.py  exceptions.py  repository.py
